fix navigation z-index

--- a/frontend/src/components/navigation/Navigation.module.scss
+++ b/frontend/src/components/navigation/Navigation.module.scss
@@ -8,7 +8,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 10000;
+  z-index: 100;
   display: flex;
   flex-direction: column;
   margin: 0 $spacing-l;
